--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>p0kn1k Cydia Repo</h1>
-<p>Add source to Cydia: http://p0kn1k.github.io/</p>
+<h1>p0kn1k</h1>
+<p>testing</p>
 </html>
